k8s/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sandpit-e2b
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`e2b.substrate.inevitable.fyi`) || HostRegexp(`^[a-z0-9-]+\.e2b\.substrate\.inevitable\.fyi$`)
      kind: Rule
      services:
        - name: sandpitd
          port: 7901
  tls:
    secretName: sandpit-e2b-tls
